Сделал в соотношении с ревью и сделал класс с тестами